--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <!-- font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" 
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-drak shadow py-3">
-        <div class="container">
-          <a class="navbar-brand text-white logo" href="#home">Fidelyce<strong>Dev</strong></a>
+    <nav class="navbar navbar-expand-lg bg-white shadow py-2 fixed-top">
+        <div class="container d-flex">
+          <a class="navbar-brand text-white logo" href="#home">
+              <h1><span>-</span>idelice</h1>
+          </a>
           <button class="navbar-toggler border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ms-auto">
               <a class="nav-link active px-3" href="#propos">A propos de moi</a>
               <a class="nav-link px-3" href="#services">Services</a>
               <a class="nav-link px-3" href="#projet">Projet</a>
@@ -29,167 +32,128 @@
         </div>
     </nav>
     <div id="home" class="bg-img">
-        <div class="container text-white">
+        <div class="container text-white text-center">
+            <h1 class="animated slideInLeft text-center">Webdesign & Intégrateur web</h1>
+            <a href="" class="btn btn-bg animated zoomIn">A PROPOS DE MOI</a>
+        </div>
+        <div class="bg-position">
+            <img class="img-fidelice" src="img/fidelice.jpg" alt="">
             <h3 class="animated slideInRight">RANDRIANARISON Fidelice</h3>
-            <h1 class="animated slideInLeft"><strong>Intégrateur web</strong></h1>
-            <a href="" class="btn btn-bg animated zoomIn">A propos</a>
         </div>
     </div>
-    <main class="container">
-        <section id="propos" class="row mt-5">
-            <div class="col-md-9 text-white mb-4">
-                <h2><strong>A PROPOS DE MOI</strong></h2>
-                <h3>Je suis Intégreteur web et j'aime ça !</h3>
-                <h4>Un développeur web passionné !</h4>
-                <p>Ma passion pour le développement web commence en 2020 et 
-                m'a demandé un changement radical de cursus afin de pouvoir 
-                pleinement l'exploiter.Dès lors, je mis tout en oeuvre pour
-                percer dans cette voie, tout en prenant du plaisir sur les diversprojets développés.</p>
-            </div>
-            <div class="col-md-3 mb-4">
-                <div class="carre animated zoomIn p-3">
-                   <img class="w-100" src="img/fidelice.jpg" alt="">
+    <section class="section-box">
+        <div class="container">
+            <h2 id="propos" class="pt-5 text-center">A PROPOS</h2>
+            <div class="row vh-500">
+                <div class="col-md-3 mb-4">
+                    <figure class="animated zoomIn">
+                        <img class="w-100" src="img/fidelice.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="col-md-9 box-apropos">
+                    <h3>A PROPOS DE MOI</h3>
+                    <h4>Je suis Intégreteur web et j'aime ça ! <br>
+                        Un Webdesigner passionné !</h4>
+                    <p>Ma passion pour le développement web commence en 2020
+                    et m'a demandé un changement radical de cursus afin de pouvoir
+                    pleinement l'exploiter.Dès lors, je mis tout en oeuvre pour percer
+                     dans cette voie, tout en prenant du plaisir sur les diversprojets développés.</p>
+                    <p><a href="" class="btn btn-bg animated zoomIn ms-auto">CONTACT</a></p>
                 </div>
             </div>
-        </section>
-        <section id="services" class="mt-5">
-            <div class="col-md-6 col-xs-12 ms-auto">
-                <h2 class="py-3"><strong>MES SERVICES</strong></h2>
-                <article>
-                    <h3>Des prestations adaptées à vos besoins</h3>
-                    <strong>Gestion de projets web</strong>
-                    <p>Site vitrine, corporate, évènementiel, e-commerce, application mobile</p>
-                </article>
-                <article>
-                    <strong>Intégration Web</strong>
-                    <p>Des intégrations HTML5 / CSS5 / bootstrap5 respectueuses des standards du Web.</p>
-                </article>
-                <article>
-                    <strong>Responsive design</strong>
-                    <p>Compatible tous supports, tablette & application mobile.</p>
-                </article>
+            <h2 class="pt-5 text-center" id="services">MES SERVICES</h2>
+            <div class="row vh-500">
+                <div class="col-md-6">
+                    <figure class="animated zoomIn">
+                        <img class="w-100" src="img/bg-ser.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-md-6">
+                    <article>
+                        <h3>Des prestations adaptées à vos besoins</h3>
+                        <h4>Gestion de projets web</h4>
+                        <p>Site vitrine, corporate, évènementiel, e-commerce, application mobile</p>
+                    </article>
+                    <article>
+                        <h4>Intégration Web</h4>
+                        <p>Des intégrations HTML5 / CSS5 / bootstrap5 respectueuses des standards du Web.</p>
+                    </article>
+                    <article>
+                        <h4>Responsive design</h4>
+                        <p>Compatible tous supports, tablette & application mobile.</p>
+                    </article>
+                </div>
             </div>
-        </section>
-        <section id="service">
-            <h3 class="my-5 text-white">Compétences supplémentaires</h3>
-            <div class="row media justify-contect-center align-items-center">
-                <div class="col-md-4 col-sm-6 mb-4 text-c">
-                    <div class="carre">
-                        <p class="mb-0">95% <br>HTML5</p>
+            <h2 class="pt-2">Compétences supplémentaires</h2>
+            <div class="row vh-300">
+                <div class="col-md-6">
+                    <h3>HTML5</h3>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6 mb-4 text-c">
-                    <div class="carre">
-                        <p class="mb-0">90% <br>CSS3</p>
+                    <h3>CSS3</h3>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90%" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-6 mb-4 text-c">
-                    <div class="carre">
-                        <p class="mb-0">85% <br>Bootstrap5</p>
+                    <h3>Bootstrap5</h3>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                </div>
-            </div>
-        </section>
-        <center class="my-5"><h2><strong>PROJET</strong></h2></center>
-        <section id="projet" class="row animated slideInUp mt-5">
-            <div class="col-md-4 col-sm-6 mb-4">
-                <div class="article">
-                    <img class="w-100" src="img/portfolio-1.jpg" alt="portfolio-1">
-                     <div class="title  p-4 mt-2">
-                        <h4>Card 1</h4>
-                        <div class="d-flex gap-3">
-                            <p>Prix : <del>70$</del></p>
-                            <p>60$</p>
-                        </div>
-                        <a href="" class="btn btn-bg">Acheter</a>
+                    <h3>Abobe xd</h3>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-                <div class="article">
-                    <img class="w-100" src="img/portfolio-7.jpg" alt="portfolio-7">
-                    <div class="title  p-4 mt-2">
-                        <h4>Card 2</h4>
-                        <div class="d-flex gap-3">
-                            <p>Prix : <del>70$</del></p>
-                            <p>60$</p>
-                        </div>
-                        <a href="" class="btn btn-bg">Acheter</a>
+                    <h3>Wordpress</h3>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-                <div class="article">
-                    <img class="w-100" src="img/portfolio-3.jpg" alt="portfolio-3">
-                    <div class="title  p-4 mt-2">
-                        <h4>Card 3</h4>
-                        <div class="d-flex gap-3">
-                            <p>Prix : <del>70$</del></p>
-                            <p>60$</p>
-                        </div>
-                        <a href="" class="btn btn-bg">Acheter</a>
-                    </div>
+        </div>
+    </section>
+    <section class="section-projet py-3" id="projet">
+        <center class="my-5"><h2>PROJET</h4></center>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <figure>
+                        <img class="w-100" src="img/slider-1.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-md-4">
+                    <figure>
+                        <img class="w-100" src="img/slider-2.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-md-4">
+                    <figure>
+                        <img class="w-100" src="img/slider-3.png" alt="">
+                    </figure>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-                <div class="article">
-                    <img class="w-100" src="img/portfolio-4.jpg" alt="portfolio-4">
-                    <div class="title  p-4 mt-2">
-                        <h4>Card 4</h4>
-                        <div class="d-flex gap-3">
-                            <p>Prix : <del>70$</del></p>
-                            <p>60$</p>
-                        </div>
-                        <a href="" class="btn btn-bg">Acheter</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-                <div class="article">
-                    <img class="w-100" src="img/portfolio-5.jpg" alt="portfolio-5">
-                    <div class="title  p-4 mt-2">
-                        <h4>Card 5</h4>
-                        <div class="d-flex gap-3">
-                            <p>Prix : <del>70$</del></p>
-                            <p>60$</p>
-                        </div>
-                        <a href="" class="btn btn-bg">Acheter</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 mb-4">
-                <div class="article">
-                    <img class="w-100" src="img/portfolio-6.jpg" alt="portfolio-6">
-                    <div class="title  p-4 mt-2">
-                        <h4>Card 6</h4>
-                        <div class="d-flex gap-3">
-                            <p>Prix : <del>70$</del></p>
-                            <p>60$</p>
-                        </div>
-                        <a href="" class="btn btn-bg">Acheter</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <center class="py-3"><strong><h2>CONTACTEZ-MOI</h2></strong></center>
-        <section id="contact" class="row p-3 text-white mt-5">
-            <p class="text-center mb-5">Avez-vous des questions? <br> N'hésitez pas à
-            nous contacter directement. Notre équipe reviendra vers vous dans quelques 
-            heures pour vous aider.</p>
+        </div>
+    </section>
+    <section class="section-contact" id="contact">
+        <div class="container">
+            <center class="py-3"><h2>CONTACTEZ-MOI</h2></center>
+        <p class="text-center mb-5">Avez-vous des questions? <br> N'hésitez pas à
+        nous contacter directement. Notre équipe reviendra vers vous dans quelques heures pour vous aider.</p>
+        <div class="row">
             <div class="col-md-8 mb-4">
-               <form action="index.html" method="post">
-                   <br>
-                   <label for="email">E-mail</label>
-                   <input class="form-control" type="email" name="email" id="" placeholder="Entre votre address Email" required>
-                   <br>
-                   <label for="">Mot de passe</label>
-                   <input class="form-control" type="password" name="password" id="" placeholder="Entre Mot de passe">
-                   <br>
-                   <label for="">Message</label>
-                   <textarea class="form-control" name="message" id="" required>Ecrivez votre Message</textarea>
-                   <br>
-                   <input class="btn border px-5 animated zoomIn" style="animation-delay: 2s;" type="submit" value="Envoyer">
-               </form>
+                <form action="index.html" method="post">
+                    <br>
+                    <label for="email">E-mail</label>
+                    <input class="form-control" type="email" name="email" id="" placeholder="Entre votre address Email" required>
+                    <br>
+                    <label for="">Mot de passe</label>
+                    <input class="form-control" type="password" name="password" id="" placeholder="Entre Mot de passe">
+                    <br>
+                    <label for="">Message</label>
+                    <textarea class="form-control" name="message" id="" required>Ecrivez votre Message</textarea>
+                    <br>
+                    <p><a href="randrianarison.fidelice@gmail.com" class="btn btn-bg animated zoomIn ms-auto">Envoyer</a></p>
+                    <!-- <input class="btn border px-5 animated zoomIn" style="animation-delay: 2s;" type="submit" value="Envoyer"> -->
+                </form>
             </div>
             <div class="col-md-4 text-center">
                 <ul class="list-unstyled mb-0">
@@ -204,11 +168,12 @@
                     </li>
                 </ul>
             </div>
-        </section>        
-    </main>
-    <footer class="text-white mt-5 text-center">
+        </div>
+        </div>
+    </section>
+    <footer class="text-white text-center bg-secondary">
         <div class="col-xs-12 py-3 d-flex align-items-center justify-contect-center flex-column">
-            <p>&copy;Tous droits réservés. Design Template integreur web par <a href="" class="text-white">RANDRIANARISON Fidelice</a> en 2021</p>
+            <p>&copy;Tous droits réservés. Design Template par <a href="" class="text-white">RANDRIANARISON Fidelice</a> en 2021</p>
             <div class="text-center d-flex gap-2 align-items-center justify-contect-center">
                 <span class="text-center"><i class="fab fa-facebook" aria-hidden="true"></i></span>
                 <span  class="text-center"><i class="fab fa-skype" aria-hidden="true"></i></span>
@@ -217,8 +182,7 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
