--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <h1><span>-</span>idelice</h1>
           </a>
           <button class="navbar-toggler border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="fa fa-bars"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
@@ -34,7 +34,7 @@
     <div id="home" class="bg-img">
         <div class="container text-white text-center">
             <h1 class="animated slideInLeft text-center">Webdesign & Intégrateur web</h1>
-            <a href="" class="btn btn-bg animated zoomIn">A PROPOS DE MOI</a>
+            <a href="#propos" class="btn btn-bg animated zoomIn">A PROPOS DE MOI</a>
         </div>
         <div class="bg-position">
             <img class="img-fidelice" src="img/fidelice.jpg" alt="">
@@ -58,7 +58,7 @@
                     et m'a demandé un changement radical de cursus afin de pouvoir
                     pleinement l'exploiter.Dès lors, je mis tout en oeuvre pour percer
                      dans cette voie, tout en prenant du plaisir sur les diversprojets développés.</p>
-                    <p><a href="" class="btn btn-bg animated zoomIn ms-auto">CONTACT</a></p>
+                    <p class="ms-auto"><a href="#contact" class="btn btn-bg animated zoomIn">CONTACT</a></p>
                 </div>
             </div>
             <h2 class="pt-5 text-center" id="services">MES SERVICES</h2>
@@ -86,7 +86,7 @@
             </div>
             <h2 class="pt-2">Compétences supplémentaires</h2>
             <div class="row vh-300">
-                <div class="col-md-6">
+                <div class="col-md-6 pb-3">
                     <h3>HTML5</h3>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -112,7 +112,7 @@
         </div>
     </section>
     <section class="section-projet py-3" id="projet">
-        <center class="my-5"><h2>PROJET</h4></center>
+        <h2 class="my-5 text-center">PROJET</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -135,7 +135,7 @@
     </section>
     <section class="section-contact" id="contact">
         <div class="container">
-            <center class="py-3"><h2>CONTACTEZ-MOI</h2></center>
+            <h2 class="text-center py-3">CONTACTEZ-MOI</h2>
         <p class="text-center mb-5">Avez-vous des questions? <br> N'hésitez pas à
         nous contacter directement. Notre équipe reviendra vers vous dans quelques heures pour vous aider.</p>
         <div class="row">
@@ -151,8 +151,7 @@
                     <label for="">Message</label>
                     <textarea class="form-control" name="message" id="" required>Ecrivez votre Message</textarea>
                     <br>
-                    <p><a href="randrianarison.fidelice@gmail.com" class="btn btn-bg animated zoomIn ms-auto">Envoyer</a></p>
-                    <!-- <input class="btn border px-5 animated zoomIn" style="animation-delay: 2s;" type="submit" value="Envoyer"> -->
+                    <input class="btn btn-bg px-5 animated zoomIn" style="animation-delay: 2s;" type="submit" value="Envoyer">
                 </form>
             </div>
             <div class="col-md-4 text-center">
