--- a/index.html
+++ b/index.html
@@ -5,181 +5,209 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <!-- font-awesome-->
+    <title>Responsive Website HTML5, CSS3, Gird, Flexbox & Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" 
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Portfolio</title>
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==
+    " crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Responsive Website HTML5, CSS3, Gird, Flexbox & Portfolio</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-white shadow py-2 fixed-top">
-        <div class="container d-flex">
-          <a class="navbar-brand text-white logo" href="#home">
-              <h1><span>-</span>idelice</h1>
-          </a>
-          <button class="navbar-toggler border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa fa-bars"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link active px-3" href="#propos">A propos de moi</a>
-              <a class="nav-link px-3" href="#services">Services</a>
-              <a class="nav-link px-3" href="#projet">Projet</a>
-              <a class="nav-link px-3" href="#contact">contact</a>
-            </div>
-          </div>
-        </div>
-    </nav>
-    <div id="home" class="bg-img">
-        <div class="container text-white text-center">
-            <h1 class="animated slideInLeft text-center">Webdesign & Intégrateur web</h1>
-            <a href="#propos" class="btn btn-bg animated zoomIn">A PROPOS DE MOI</a>
-        </div>
-        <div class="bg-position">
-            <img class="img-fidelice" src="img/fidelice.jpg" alt="">
-            <h3 class="animated slideInRight">RANDRIANARISON Fidelice</h3>
-        </div>
-    </div>
-    <section class="section-box">
+    <header class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
         <div class="container">
-            <h2 id="propos" class="pt-5 text-center">A PROPOS</h2>
-            <div class="row vh-500">
-                <div class="col-md-3 mb-4">
-                    <figure class="animated zoomIn">
-                        <img class="w-100" src="img/fidelice.jpg" alt="">
-                    </figure>
+            <h1 class="logo">Fidelice.</h1>
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <!-- <span class="navbar-toggler-icon"></span> -->
+                <span class="fa fa-bars text-white"></span>
+            </button>
+           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="#accuiel">Accueil</a>
+                </li>                  
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="#Apropos">A propos de moi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#Portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#Contact">Contact</a>
+                </li>
+              </ul>
+           </div>
+        </div>
+    </header>
+    <section class="integration bg-primary" id="accuiel">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="integration-text col-md-8">
+                    <h1>Randrianarison Fidelice</h1>
+                    <p>Webdesigner & integration web</p>
+                    <a href="#Apropos" class="btn btn-outline-light">A propos</a>
                 </div>
-                <div class="col-md-9 box-apropos">
-                    <h3>A PROPOS DE MOI</h3>
-                    <h4>Je suis Intégreteur web et j'aime ça ! <br>
-                        Un Webdesigner passionné !</h4>
-                    <p>Ma passion pour le développement web commence en 2020
-                    et m'a demandé un changement radical de cursus afin de pouvoir
-                    pleinement l'exploiter.Dès lors, je mis tout en oeuvre pour percer
-                     dans cette voie, tout en prenant du plaisir sur les diversprojets développés.</p>
-                    <p class="ms-auto"><a href="#contact" class="btn btn-bg animated zoomIn">CONTACT</a></p>
-                </div>
-            </div>
-            <h2 class="pt-5 text-center" id="services">MES SERVICES</h2>
-            <div class="row vh-500">
-                <div class="col-md-6">
-                    <figure class="animated zoomIn">
-                        <img class="w-100" src="img/bg-ser.png" alt="">
-                    </figure>
-                </div>
-                <div class="col-md-6">
-                    <article>
-                        <h3>Des prestations adaptées à vos besoins</h3>
-                        <h4>Gestion de projets web</h4>
-                        <p>Site vitrine, corporate, évènementiel, e-commerce, application mobile</p>
-                    </article>
-                    <article>
-                        <h4>Intégration Web</h4>
-                        <p>Des intégrations HTML5 / CSS5 / bootstrap5 respectueuses des standards du Web.</p>
-                    </article>
-                    <article>
-                        <h4>Responsive design</h4>
-                        <p>Compatible tous supports, tablette & application mobile.</p>
-                    </article>
-                </div>
-            </div>
-            <h2 class="pt-2">Compétences supplémentaires</h2>
-            <div class="row vh-300">
-                <div class="col-md-6 pb-3">
-                    <h3>HTML5</h3>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <h3>CSS3</h3>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90%" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <h3>Bootstrap5</h3>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <h3>Abobe xd</h3>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <h3>Wordpress</h3>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                <div class="integration-figure col-md-4">
+                    <img src="img/fidelice.jpg" alt="">
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-projet py-3" id="projet">
-        <h2 class="my-5 text-center">PROJET</h2>
+    <!-- Apropos -->
+    <section class="Apropos" id="Apropos">
+        <aside>
+            <hr class="trace"> A propos <hr class="trace">
+        </aside>
+        <div class="container d-flex">
+            <div class="Apropos-figure">
+                <img src="img/fidelice.jpg" alt="">
+            </div>
+            <div class="Apropos-text">
+                <h2>A propos de moi</h2>
+                <p>Étant actuellement à la recherche d’un emploi, je me permets de vous proposer ma candidature 
+                pour le poste d’intégrateur web. J’ai toujours été passionné par le secteur du développement 
+                web et de l’intégration web.</p>
+                <p>En effet, afin d’approfondir ces domaines, j’ai suivi une formation et obtenu un certificat de 
+                fin de formation en « Webdesigner » au sein de l’Université ISETS (Institut Supérieur
+                D’Enseignent Technologique et des Sciences) à Ankadidramamy Antananarivo. Par la suite, j’ai suivi 
+                d’autres Mooc ou modules au centre de formation DEVINBOX. J’y ai également reçu plusieurs 
+                attestations pour compétences en HTML, CSS, Bootstrap, Wordpress. Dernièrement, j’ai suivi un 
+                stage en tant qu’intégrateur web au sein de la société NOGAE Imerinampovoany.</p>
+                <h2>Experience Professionnelles</h2>
+                <p>2021 : stage 3 moi dans la Société Nogae pour le post intégrateur web.Technologies 
+                : Html5, css3, Bootstrap, WordPress</p>
+                <p>2021 : Intégration de la partie front d’un site Agence immobilière.Technologies 
+                : Html5, css3, Bootstrap, Git</p>
+                <p>2020 – 2021 : Création site Aromad, un site web publication des images.
+                Technologies : Html5, css3, Git</p>
+                <a href="#Contact" class="btn btn-primary">Contact</a>
+            </div>
+        </div>
+    </section>
+    <section class="compétences">
+        <aside>
+            <hr class="trace">compétences technique<hr class="trace">
+        </aside>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <figure>
-                        <img class="w-100" src="img/slider-1.png" alt="">
-                    </figure>
+                <div class="col-md-6">
+                    <span> HTML</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 100%;" 
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    </div>
+                    <span> CSS3</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 89%;" 
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">89%</div>
+                    </div>
+                    <span>Adobe XD UI/UX</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 75%;" 
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">75%</div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <figure>
-                        <img class="w-100" src="img/slider-2.png" alt="">
-                    </figure>
-                </div>
-                <div class="col-md-4">
-                    <figure>
-                        <img class="w-100" src="img/slider-3.png" alt="">
-                    </figure>
+                <div class="col-md-6">
+                    <span>Bootstrap</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" 
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">80%</div>
+                    </div>
+                    <span>WordPress</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%;" 
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">50%</div>
+                    </div>
+                    <span>Photoshop CC 2019</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 15%;" 
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">15%</div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-contact" id="contact">
+    <section class="Portfolio" id="Portfolio">
+        <aside>
+            <hr class="trace">Portfolio<hr class="trace">
+        </aside>
+        <h2 class="my-5">Voici mon projet que je fais avec Adobe XD</h2>
         <div class="container">
-            <h2 class="text-center py-3">CONTACTEZ-MOI</h2>
-        <p class="text-center mb-5">Avez-vous des questions? <br> N'hésitez pas à
-        nous contacter directement. Notre équipe reviendra vers vous dans quelques heures pour vous aider.</p>
-        <div class="row">
-            <div class="col-md-8 mb-4">
-                <form action="index.html" method="post">
-                    <br>
-                    <label for="email">E-mail</label>
-                    <input class="form-control" type="email" name="email" id="" placeholder="Entre votre address Email" required>
-                    <br>
-                    <label for="">Mot de passe</label>
-                    <input class="form-control" type="password" name="password" id="" placeholder="Entre Mot de passe">
-                    <br>
-                    <label for="">Message</label>
-                    <textarea class="form-control" name="message" id="" required>Ecrivez votre Message</textarea>
-                    <br>
-                    <input class="btn btn-bg px-5 animated zoomIn" style="animation-delay: 2s;" type="submit" value="Envoyer">
-                </form>
+            <div class="row justify-content-center align-items-center g-3">
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href="#accuiel">
+                        <img src="img/logo – 1.jpg" alt="">
+                    </a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href=""><img src="img/logo – 3.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href=""><img src="img/logo – 2.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href=""><img src="img/logo.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                   <a href=""> <img src="img/logo – 4.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href=""><img src="img/logo – 5.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href=""><img src="img/logo – 6.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
+                <div class="Projet col-lg-3 col-sm-6">
+                    <a href=""><img src="img/logo – 7.jpg" alt=""></a>
+                    <div class="projet-titre">
+                        <h3>Design Logo</h3>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 text-center">
-                <ul class="list-unstyled mb-0">
-                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>Antananarivo, 101, Madagascar</p>
-                    </li>
-                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>034 37 918 55</p>
-                    </li>
-                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>randrianarison.fidelice@gmail.com</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
         </div>
     </section>
-    <footer class="text-white text-center bg-secondary">
-        <div class="col-xs-12 py-3 d-flex align-items-center justify-contect-center flex-column">
-            <p>&copy;Tous droits réservés. Design Template par <a href="" class="text-white">RANDRIANARISON Fidelice</a> en 2021</p>
-            <div class="text-center d-flex gap-2 align-items-center justify-contect-center">
-                <span class="text-center"><i class="fab fa-facebook" aria-hidden="true"></i></span>
-                <span  class="text-center"><i class="fab fa-skype" aria-hidden="true"></i></span>
-                <span class="text-center"><i class="fab fa-instagram" aria-hidden="true"></i></span>
-                <span class="text-center"><i class="fab fa-linkedin" aria-hidden="true"></i></span>
+    <section class="Contact" id="Contact">
+        <div class="container box-shadow">
+            <aside>
+                <hr class="trace">Contactez moi<hr class="trace">
+            </aside>
+            <div class="contact-social">
+                <p><i class="fa fa-phone" aria-hidden="true"></i> : 034 37 918 55</p>
+                <p><i class="fa fa-envelope" aria-hidden="true"></i> : randrianarison.fidelice@gmail.com</p>
+                <p><i class="fab fa-skype" aria-hidden="true"></i> : fidelice randrianarison</p>
+                <p><i class="fab fa-facebook" aria-hidden="true"></i> : dilys randrianarison</p>
+            </div>
+            <div class="contact-form">
+                <input class="form-controle" type="email" name="email" id="" placeholder="Entre votre Adresse Email" required>
+                <input class="form-controle" type="password" name="pass" id="" placeholder="Entre votre Mot de passe" required>
+                <textarea class="textarea" name="" id=""  placeholder="Message" required></textarea>
+                <input class="btn btn-primary" type="submit" value="Envoyer">
             </div>
         </div>
+    </section>
+    <footer>
+        <h4>Randrianarison Fidelice</h4>
+        <p>&copy Copyright MyPortfolio. All Rights Reserved <br> Designed by Fidelice</p>
     </footer>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
